static/css/style.css
body {
    font-family: Montserrat, sans-serif;
    transition: 0.3s;
}

h1, h2, h3, h4, .navbar-brand, .logo, .movie-font {
    font-family: Bebas Neue, sans-serif;
}

.container {
    display: flex;
    justify-content: center;
}

.generic-button {
    border-radius: 10px;
    background-color: #c4c4c4;
    font-weight: 5S00;
    width: 180px;
    margin: 0 2px;
    transition: 0.3s;
}

.generic-button > a {
    text-decoration: none;
    color: inherit;
}


.generic-button:hover {
    color: #fafafa;
}

.button-color-green {
    background-color: #00DE00;
}

.button-color-gold {
    background-color: #ffca18;
}

.button-color-red {
    background-color: #D80000;
}

/*  Navbar */

.navbar {
    border-bottom: 5px solid #ffca18;
}

.navbar-brand, .navbar-dark .navbar-nav .nav-link {
    color: #FAFAFA;
    transition: 0.25s;
}

.navbar-brand {
    font-size: 2rem;
    padding: 0.25rem 1rem 0 1rem;
    margin-left: 1rem;
} 

.navbar-dark .navbar-brand:hover, .navbar-dark .navbar-nav .nav-link:hover, .sidenav a:hover, .sidenav .closebtn:hover, .socials i:hover, .logo:hover, .back-to-top-button:hover {
    color: #ffca18;
    cursor: pointer;
}

.bg-dark {
    background-color: #111 !important;
}

.navbar-buttons {
    margin-right: 1rem;
    justify-content: end !important;
}

.navbar-button {
    width: 100px;
    background-color: #ffca18;
    border: 2px solid #ffca18;
    color: #000;
    font-weight: 600;
    margin: .125rem 0.25rem 0;
    padding: .375rem .25rem;
    border-radius: .25rem;
    text-decoration: none;
    transition: 0.25s;
}

.navbar-button i {
    margin-right: 5px;
}

.navbar-button:hover {
    color: #c4c4c4;
    background-color: transparent;
}

.navbar-toggler {
    margin-right: 2rem;
}


/* Side Bar */

.sidenav {
    height: 100%;
    width: 0px; 
    position: fixed;
    z-index: 1050; 
    top: 0; 
    right: 0;
    background-color: #111; 
    border-left: 0px solid #ffca18;
    overflow-x: hidden; 
    padding-top: 60px; 
    transition: 0.5s; 
}

.content-cover {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1045;
    top: 0;
    left: 0;
    background-color: rgba(0,0,0, 0.4);
    overflow-y: auto;
    overflow-x: hidden;
    text-align: center;
    opacity: 0;
    transition: opacity 1s;
}

.side-nav-hr, .form-card hr, .reviews-container hr {
    height: 5px !important;
    border: none;
    background-color: #ffca18;
    margin: 20px 32px;
    border-radius: 50px;
    width: 75%;
    opacity: 1;
    max-width: 250px;
}

.sidenav > ul > li > a {
    width: 220px;
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 1.25rem;
    color: #fafafa;
    display: block;
    transition: 0.3s;
}

.sidenav button {
    margin: 8px 8px 8px 32px;
}

.sidenav button > a {
    color: #000;
    text-decoration: none;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    margin: 0;
    right: 25px;
    font-size: 4rem;
    border: none;
    background-color: transparent;
    color: #fafafa;
}


@media (max-width: 320px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
    .navbar-brand {margin: 0;}
    .navbar-toggler  {margin-right: 0.5rem;}
}

/* base.html .content */

.content  {
    min-height: calc(100vh - 237px);
}

#header-image {
    height: 160px;
    width: 100%;
    object-fit: cover;
    object-position: center;
    position: absolute;
}

#header-title {
    width: 100%;
    color: #fff;
    font-size: 4rem;
    text-align: center;
    position: relative;
    padding: 50px 0 34px;
    margin-bottom: 0;
}

@media (min-width: 768px) {
    .content {
        min-height: calc(100vh - 135px);
    }
}

@media (max-width: 320px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
    .navbar-brand {margin: 0;}
    .navbar-toggler  {margin-right: 0.5rem;}
}

/* Footer */

footer {
    background-color: #111;
    color: #fafafa;
    border-top: 5px solid #ffca18;
}

.socials {
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.socials i, .back-to-top-button, .logo {
    text-decoration: none;
    color: #fafafa;
    transition: 0.3s;
    font-size: 1.3rem;
    margin: 10px 5px;
    padding: 3px;
}

footer .logo {
    font-size: 2rem;
    margin: 1px 5px;
}

/* Genre Management */

.search-bar-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 40px 0 50px;
    flex-wrap: wrap;
}

.accordion-genre-form {
    margin: 10px 0;
}

.input-container {
    position: relative;
}

.search-bar-container input {
    width: 80vw;
    min-width: 180px;
    margin: 10px 20px 30px;
    border-radius: 10px;
    padding-left: 55px;
    position: relative;
}

.search-bar-container i {
    position: absolute;
    left: 40px;
    top: 17px;
}

.genre-container {
    display: flex;
    align-content: center;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    margin: 5px;
    border: 1px solid #c4c4c4;
    border-radius: 5px;
}

.genre-container h3 {
    width: 250px;
    text-align: center;
    padding-top: 4px;
}

@media (min-width: 768px) {
    .search-bar-container input {width: 450px; margin: 0 20px 0 0;}
    .search-bar-container i {position: absolute; left: 20px; top: 7px;}
}

/* Sign Up & Sign In */

.generic-form {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: flex-start;
    align-items: center;
}

.generic-form input {
    width: 100%;
    margin-bottom: 8px;
    padding-left: 10px;
}

.generic-form select {
    padding: 5px 0;
    margin: 8px;
    width: 100%;
}

.generic-form textarea, .generic-form select,.generic-form input {
    padding-left: 10px;
}

.buttons-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.form-card {
    margin: 30px auto;
    width: 100%;
    padding: 20px 25px;
}

.form-card input  {
    max-width: 350px;
}

.input-large select, .input-large textarea, .input-large [type="text"], .input-large [type="list"], .input-large [type="date"], .input-large [type="email"]  {
    width: 100%;
    max-width: 600px;
}

.card-small {
    max-width: 550px;
}

.card-large {
    max-width: 800px;
}

.checkbox-container {
    width: 100%;
    margin: 25px 0;
}

p > a {
    text-decoration: none;
    color: inherit;
    transition: 0.3s;
}

p > a:hover {
    font-size: 600;
    color: #ffca18;
}

/* Contact */

.generic-form textarea {
    width: 100%;
    height: 200px;
}

/* Home */

.carousel-label {
    padding-left: 2rem;
}

.generic-divider {
    color: #ffca18;
    height: 5px !important;
    border-radius: 40px;
    margin: 2rem auto 4rem;
    opacity: 1;
    width: 75%;
}

.movie-carousel {
    height: 330px;
    width: 100%;
    padding: 10px;
    overflow-x: scroll;
    background-color: #c4c4c4;
    margin-bottom: 2rem;
    display: flex;
    flex-wrap: nowrap;
    align-content: flex-start;
}

.movie-picture-display, .movie-placeholder, .movie-image-continer {
    height: 250px;
    width: 169px;
    
}

.movie-picture-display, .movie-placeholder, .movie-image-continer {
    margin-right: 10px;
}

.single-movie-picture-display {
    margin: 0 auto;
}

.movie-image-continer {
    overflow: hidden;
}

.movie-picture-display img, .movie-picture-display a {
    object-fit: fill;
    height: 100%;
    width: inherit;
    transition: all 0.2s ease-in-out;
}

.movie-picture-display img:hover {
    transform: scale(1.04)
}

.movie-carousel h4, .search-results-container h4 {
    text-align: center;
    margin-bottom: 0;
    width: 169px;
    height: 55px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.movie-placeholder {
    padding: 20px 10px;
    background-color: currentColor;
    opacity: .5;
}

.movie-placeholder button {
    width:100%;
    margin: 0;
}

.movie-placeholder p {
    color: #fafafa;
    text-align: center;
    margin: 0;
    height: 85%
}

/* Movie Form */

select {
    color: #8e8e8e;
}

.text-black {
    color: #000;
}

.checkbox-container > .series-checkboxes {
    width: initial;
}

.star-rating-container {
    margin: 10px 0 0 auto;
}

.star-rating-container i:hover {
    cursor: pointer;
    animation: shake 0.75s;
    animation-iteration-count: 2;
}

@keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
  }

.gold-star {
    color:#ffca18;
}

/* Processing Screen */

#processing {
    width: 100%;
    cursor: wait;
    display: none;
    min-height: calc(100vh - 237px);
}

#processing img {
    width: 100%; 
    height: auto;
    overflow: auto;
}

@media (min-width: 576px) {
    #processing img {
        width: 480px; 
        height: 360px;
    }
}

@media (min-width: 768px) {
    #processing {
         min-height: calc(100vh - 135px);
    }
}

/* Modal */

.modal-search-bar-container input {
    width: 100%;
    margin-top: 15px;
    border-radius: 10px;
    padding-left: 55px;
    position: relative;
}

.modal-search-bar-container i {
    position: absolute;
    left: 27px;
    top: 21px;
}

/* Reviews */

.reviews-container, .review-footer{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
}

.reviews-header {
    border: 1px solid rgba(0,0,0,.125);
    border-radius: 0.25rem;
    padding: 15px 0;
}

.reviews-header-img, .reviews-header a {
    height: 100px;
    width: auto;
}

.reviews-header .image-container {
        margin: 0 auto;
}

.sub-script {
    font-size: 0.6rem;
    font-weight: 200;
}

.small-text {
    font-size: 0.85rem;
}

.review-card {
    margin: 15px auto;
}

.five-stars-container {
    width: 100%;
    height: 23px;
    display: flex;
    justify-content: center;
}

.five-stars-container img, .five-stars-container div {
    width: 120px;
}

.five-stars-container img {
    height: 23px;
    position: absolute;
    right: 0;
}

.five-stars-container .mask  {
    height: 23px;
    width: 100%;
    position: absolute;
    right: 0;
    background-color: #fff;
    z-index: 3;
    object-fit: cover;
    object-position: right;
}

.five-stars {
    z-index: 2;
}

@media(min-width: 993px ){
    .review-card {
        width: 47%;
    }
}


/* Search */

.search-results-container {
    height: 100%;
    min-height: 310px;
    width: 100%;
    padding: 10px;
    margin-bottom: 2rem;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    border: 1px solid rgba(0,0,0,.125);
    border-radius: 0.25rem;
    justify-content: space-evenly;
}

.search-results-container .movie-picture-display{
    margin: 0 0 3.5rem;
}

@media(min-width:768px) {
    .search-results-container{
        justify-content: flex-start;
    }
}

